@@ -24,7 +24,7 @@
  * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  * SUCH DAMAGE.
  *
- * $Id: libdwarf.h 3035 2014-05-05 19:16:27Z kaiwang27 $
+ * $Id: libdwarf.h 3041 2014-05-18 15:11:03Z kaiwang27 $
  */
 
 #ifndef	_LIBDWARF_H_
@@ -751,6 +751,7 @@ int		dwarf_next_cu_header_c(Dwarf_Debug, Dwarf_Bool,
 		    Dwarf_Unsigned *, Dwarf_Half *, Dwarf_Off *, Dwarf_Half *,
 		    Dwarf_Half *, Dwarf_Half *, Dwarf_Sig8 *, Dwarf_Unsigned *,
 		    Dwarf_Unsigned *, Dwarf_Error *);
+int		dwarf_next_types_section(Dwarf_Debug, Dwarf_Error *);
 int		dwarf_object_finish(Dwarf_Debug, Dwarf_Error *);
 int		dwarf_object_init(Dwarf_Obj_Access_Interface *, Dwarf_Handler,
 		    Dwarf_Ptr, Dwarf_Debug *, Dwarf_Error *);
