@@ -1,3 +1,7 @@
+Sun May 25 15:49:25 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Sun May 25 15:48:09 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
